[package]
name = "holger-cli"
version = "0.0.1"
edition = "2021"
authors = ["Rickard Lundin <rickard@x14.se>" ,"Wilhelm Ågren"]
description = "Holger guards your artifacts at rest."
license = "MIT"
repository = "https://github.com/Ignalina/holger"
readme = "../README.md"
categories = ["command-line-utilities","development-tools"]
keywords = ["znippy", "zstd", "parallel", "arrow", "blake3"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
holger-core = "0.0.1"
env_logger = "0.11.8"
