[package]
name = "holger-cli"
version = "0.2.1"
edition = "2021"
authors = ["Rickard Lundin <rickard@x14.se>" ,"Wilhelm Ågren"]
description = "Holger guards your artifacts at rest."
license = "MIT"
repository = "https://github.com/Ignalina/holger"
readme = "../README.md"
categories = ["command-line-utilities","development-tools"]
keywords = ["znippy", "zstd", "parallel", "arrow", "blake3"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
#holger-ron = {path="../holger-ron"}
holger-ron = {version = "0.2.0"}
env_logger = "0.11.8"
ctrlc = "3.4.7"
ron = "0.10.1"
tokio = "1.47.1"
holger-cli = "0.2.0"
