[package]
name = "holger-core"
version = "0.0.1"
edition = "2021"
authors = ["Rickard Lundin <rickard@x14.se>","Wilhelm Ågren"]

[dependencies]

futures-util = { version = "0.3", default-features = false }
hyper = { version = "1.6", features = ["full"] }
tokio = { version = "1.47", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
bytes = "1.10.1"
anyhow = "1.0.98"

derivative = "2.2.0"


hyper-util = { version = "0.1.16", features = ["tokio"] }
tokio-rustls = "0.26.2"
rustls = { version = "0.23.31", features = ["std"] }
rustls-pemfile = "1.0.4"
http-body-util = "0.1.3"
once_cell = "1.21.3"
async-trait = "0.1.88"
futures = "0.3.31"
url = "2.5.4"
ctrlc = "3.4.7"
