[package]
name = "holger-rust-file-repository"
version = "0.2.0"
edition = "2021"
authors = ["Rickard Lundin <rickard@x14.se>","Wilhelm Ågren"]

description = "Holger guards your artifacts at rest. May Allfather Odin watch over every bit."
license = "MIT"
repository = "https://github.com/Ignalina/holger"
readme = "../README.md"
categories = ["command-line-utilities","development-tools"]
keywords = ["file", "artifacts", "blake3", "cli","airgap"]


[dependencies]

anyhow = "1.0.98"

#holger-traits = {path="../holger-traits"}
holger-traits = {version = "0.2.0"}

sha2 = "0.11.0-rc.0"
hex = "0.4.3"

[[example]]
name = "get_path"
