[package]
name = "holger-traits"
version = "0.2.0"
edition = "2021"
authors = ["Rickard Lundin <rickard@x14.se>","Wilhelm Ågren"]


description = "Holger guards your artifacts at rest. May Allfather Odin watch over every bit."
license = "MIT"
repository = "https://github.com/Ignalina/holger"
readme = "../README.md"
categories = ["command-line-utilities","development-tools"]
keywords = ["znippy", "artifacts", "blake3", "cli","airgap"]


[dependencies]



serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"

async-trait = "0.1.88"
